# atbci-website

./: 404.html  CNAME  README.md  deploy  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
css/: palette.css  styles.css
docs/: index.md
docs/css/: palette.css
docs/en/: index.md
docs/it/: il-consorzio.md  il-progetto.md  index.md
en/: index.html
it/: index.html
overrides/partials/: footer.html
search/: search_index.json
src/atbci_website/: __init__.py
