[project]
name = "atbci-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Febo Cincotti", email = "febo.cincotti@uniroma1.it" }
]
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pip>=25.1.1",
    "pymdown-extensions>=10.15",
]

[project.scripts]
atbci-website = "atbci_website:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
